--- a/cp10/WebRoot/css/style.css
+++ b/cp10/WebRoot/css/style.css
@@ -93,3 +93,23 @@ input,textarea,.btn:hover {
 	-moz-box-shadow: inset 0 0 3px rgba(0, 0, 0, .7);
 	box-shadow: inset 0 0 3px rgba(0, 0, 0, .7);
 }
+
+.flex {
+	width: 800px;
+	height: 600px;
+	display: -webkit-flex;
+	-webkit-flex-direction: row;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: flex-start;
+	margin: 20px auto;
+}
+
+.flex-item img {
+	margin-left:40px;
+}
+
+.flex-item ul li:first-child{
+	color:green;
+}
